--- a/style.css
+++ b/style.css
@@ -6,4 +6,15 @@
 body {
     background-color: lightskyblue;
     font-family: Arial, Helvetica, sans-serif;
+    background-image: url(imagens/fundo-madeira.jpg);
+    background-position: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+iframe {
+    display: block;
+    margin: auto;
+    width: 311px;
+    height: 627px;
 }
