--- a/style.css
+++ b/style.css
@@ -2,19 +2,31 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+html, body {
+    width: 100vw;
+    height: 100vh;
+    background-color: lightskyblue;
 }
 body {
-    background-color: lightskyblue;
-    font-family: Arial, Helvetica, sans-serif;
     background-image: url(imagens/fundo-madeira.jpg);
-    background-position: 100%;
+    background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
 }
-iframe {
-    display: block;
-    margin: auto;
-    width: 311px;
+main {
+    position: relative;
+    height: 100vh;
+}
+#telefone {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     height: 627px;
+    width: 311px;
+    background-image: url(imagens/frame-iphone.png);
+    background-repeat: no-repeat;
 }
