--- a/style.css
+++ b/style.css
@@ -30,3 +30,10 @@ main {
     background-image: url(imagens/frame-iphone.png);
     background-repeat: no-repeat;
 }
+#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 40vw;
+    height: 73vh;
+}
