--- a/style.css
+++ b/style.css
@@ -37,3 +37,18 @@ main {
     width: 40vw;
     height: 73vh;
 }
+#redes_sociais {
+    text-align: right;
+}
+#redes_sociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.509);
+    box-sizing: border-box;
+}
+#redes_sociais img:hover {
+    width: 60px;
+    border: 2px solid white;
+    transition: .5s;
+}
