--- a/estilos/style.css
+++ b/estilos/style.css
@@ -10,7 +10,7 @@ html, body {
     background-color: lightskyblue;
 }
 body {
-    background-image: url(imagens/fundo-madeira.jpg);
+    background-image: url(../imagens/fundo-madeira.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -27,7 +27,7 @@ main {
     transform: translate(-50%, -50%);
     height: 627px;
     width: 311px;
-    background-image: url(imagens/frame-iphone.png);
+    background-image: url(../imagens/frame-iphone.png);
     background-repeat: no-repeat;
 }
 #tela {
