--- a/estilos/style_pags_extras.css
+++ b/estilos/style_pags_extras.css
@@ -25,3 +25,8 @@ a {
     padding: 10px;
     width: 100vw;
 }
+a:hover {
+    background-color: rgb(100, 153, 222);
+    text-decoration: underline;
+    transition: .25s;
+}
